--- a/i3/config
+++ b/i3/config
@@ -33,12 +33,6 @@ set $ft:System Francisco
 # Look
 #-------
 
-set $bg-color            #2f343f
-set $inactive-bg-color   #2f343f
-set $text-color          #f3f4f5
-set $inactive-text-color #676E7D
-set $urgent-bg-color     #E53935
-
 # Hybrid colors
 set $back               #1d1F21
 set $black              #282A2E
@@ -48,14 +42,22 @@ set $white              #C5C8C6
 set $yellow             #F0C674
 set $red                #CC6666
 set $darkred            #A54242
-set $green              #B5BD56
+set $darkgreen          #188407
+set $green              #4DCC26
+
+set $bg-color            #2f343f
+set $inactive-bg-color   #2f343f
+set $text-color          #f3f4f5
+set $inactive-text-color #676E7D
+set $urgent-bg-color     #E53935
+
 
 # new window default border
 new_window pixel 3
 new_float pixel 3
 
 #class                  border      backgr.     text        split
-client.focused          $green     $green       $black      $red
+client.focused          $darkgreen  $darkgreen  $black      $green
 client.focused_inactive $grey       $grey       $lightgrey  $grey
 client.unfocused        $grey       $grey       $lightgrey  $grey
 client.urgent           $red        $red        $black      $red
@@ -66,7 +68,7 @@ gaps inner 5
 gaps outer 3
 
 # Wallpaper
-exec --no-startup-id feh --bg-fill --no-xinerama /home/iownyou/Pictures/Wallpapers/LmYgEH3.png
+exec --no-startup-id feh --bg-fill --no-xinerama ~/Pictures/wallpapers/0JSyoDH.jpg
 
 #----------
 # Applications
@@ -219,7 +221,7 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
     position top
-    status_command i3blocks -c /home/iownyou/.i3/i3blocks.conf
+    status_command i3status
     colors {
         background $bg-color
         separator #757575
@@ -230,7 +232,8 @@ bar {
     }
 }
 
-bindsym $mod+d exec dmenu_run -fn "$ft" -nb "$black" -nf "$white" -sb "$yellow" -sf "$black"
+# bindsym $mod+d exec dmenu_run -fn "$ft" -nb "$black" -nf "$white" -sb "$yellow" -sf "$black"
+bindsym $mod+d exec rofi -show run
 
 #######################################################################
 # automatically start i3-config-wizard to offer the user to create a
@@ -242,5 +245,4 @@ bindsym $mod+d exec dmenu_run -fn "$ft" -nb "$black" -nf "$white" -sb "$yellow" 
 # Please remove the following exec line:
 #######################################################################
 exec i3-config-wizard
-exec xmodemap ~/.Xmodmap
 exec setxkbmap -layout es -variant mac -option caps:swapescape
