--- a/tmux.conf
+++ b/tmux.conf
@@ -15,9 +15,53 @@ set -g mouse on
 set -g mode-keys vi
 set -g default-terminal "screen-256color"
 
+# start with zsh
+set-option -g default-shell /bin/zsh
+
 # smart pane switching with awareness of vim splits
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+        | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+        bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+        bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+        bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+        bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+        bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+        bind-key -T copy-mode-vi C-h select-pane -L
+        bind-key -T copy-mode-vi C-j select-pane -D
+        bind-key -T copy-mode-vi C-k select-pane -U
+        bind-key -T copy-mode-vi C-l select-pane -R
+        bind-key -T copy-mode-vi C-\ select-pane -l
+
+# the status bar
+set -g status-position bottom
+set -g status-bg colour234
+set -g status-fg colour137
+set -g status-attr dim
+set -g status-left ''
+set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-right-length 50
+set -g status-left-length 20
+
+setw -g window-status-current-fg colour81
+setw -g window-status-current-bg colour238
+setw -g window-status-current-attr bold
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+
+setw -g window-status-fg colour138
+setw -g window-status-bg colour235
+setw -g window-status-attr none
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
+setw -g window-status-bell-attr bold
+setw -g window-status-bell-fg colour255
+setw -g window-status-bell-bg colour1
+
+# border colours
+set -g pane-border-style fg=yellow
+set -g pane-active-border-style fg=yellow
+set -g pane-active-border-style bg=default
+
+# the messages
+set -g message-attr bold
+set -g message-fg colour232
+set -g message-bg colour166
